--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ email: i.santamaria@unican.es
 authors:
   johndoe:
     name: John Doe
-    bio: A Man who travels the world eating noodles
+    bio: Professor, Universidad de Cantabria, Spain
     external-image: false
     picture: assets/images/profile.jpg
     twitter: johndoe
