--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ disqus:
 #facebook: myfacebook
 #twitter: mytwitter
 #instagram: myinstagram
-linkedin: https://www.linkedin.com/in/ignacio-santamaria-08a79a18/?originalSubdomain=es
+linkedin: /ignacio-santamaria-08a79a18/?originalSubdomain=es
 github: mygithub
 email: i.santamaria@unican.es
 
