--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
+external-image: false
 picture: assets/images/Santamaria_pic.jpg
 
 # your site color theme, true for dark theme, 
