--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ authors:
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
@@ -69,6 +69,7 @@ publications: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 
+# if you don't need "about" or "blog", comment them out below
 blog: false
 
 # do you want to show the "read time" of the posts?
