--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ width: large
 publications: true
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
